[package]
name = "rust_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# priority queue
priority-queue = "1.3.2"

# linked hash map
linked-hash-map = "0.5.6"

# rustc hash
rustc-hash = "1.1.0"
itertools = "0.12.0"